<resources>
    <string name="app_name">PalindromeApp</string>
    <string name="tv_name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="name">Nama</string>
    <string name="second_screen">Second Screen</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="third_screen">Third Screen</string>
</resources>