<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.FirstScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="15dp"
        android:hint="@string/tv_name"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_palindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="15dp"
        android:hint="@string/palindrome"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:text="@string/check"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_palindrome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />


</androidx.constraintlayout.widget.ConstraintLayout>